[B]0.9.3[/B]
Update widget code to use skinshortcut templates

[B]0.9.2[/B]
Fix focus on re-entering home screen
Fix (hopefully) widget loading

[B]0.9.1[/B]
Add option to hide submenu
Add Arial font
Add Simple and Dark Glass color schemes

[B]0.9.0[/B]
Initial commit