@@ -3,138 +3,106 @@
     <include name="NextAired_Group">
         <param name="visible" default="true" />
         <definition>
-            <control type="grouplist" id="8$PARAM[listid]">
-                <left>42</left>
-                <height>40</height>
-                <top>0</top>
+            <control type="group" id="8$PARAM[listid]">
+                <height>0</height>
                 <visible>$PARAM[visible]</visible>
                 <visible>Integer.IsGreater(Container($PARAM[listid]).NumItems) | Container.IsUpdating($PARAM[listid])</visible>
-                <orientation>horizontal</orientation>
-                <usecontrolcoords>true</usecontrolcoords>
-                <itemgap>16</itemgap>
-                <control type="image">
-                    <width>16</width>
-                    <height>100%</height>
-                    <aspectratio aligny="center">keep</aspectratio>
-                    <texture colordiffuse="main_fg_30">common/cube-16.png</texture>
-                </control>
-                <control type="label">
-                    <left>2</left>
-                    <textcolor>main_fg_100</textcolor>
-                    <label>$PARAM[label]$INFO[Window(Home).Property(NextAired.$PARAM[listid].Date),$COMMA  ,]</label>
-                    <include>Statusbar_Menubar_Items</include>
-                </control>
-                <control type="image">
-                    <texture colordiffuse="$VAR[ColorHighlight]">common/white.png</texture>
-                    <width>3</width>
-                    <top>10</top>
-                    <bottom>8</bottom>
-                    <visible>Control.HasFocus($PARAM[listid])</visible>
-                </control>
-                <control type="label">
-                    <textcolor>main_fg_70</textcolor>
-                    <label>$INFO[Container($PARAM[listid]).ListItem.Label]$INFO[Container($PARAM[listid]).ListItem.Property(NextNumber), • ,]$INFO[Container($PARAM[listid]).ListItem.Property(NextTitle), ,]$INFO[Container($PARAM[listid]).ListItem.Property(ShortTime), @ ,]</label>
-                    <include>Statusbar_Menubar_Items</include>
-                    <visible>Control.HasFocus($PARAM[listid])</visible>
+                <control type="grouplist">
+                    <left>view_pad</left>
+                    <height>40</height>
+                    <top>0</top>
+                    
+                    <orientation>horizontal</orientation>
+                    <usecontrolcoords>true</usecontrolcoords>
+                    <itemgap>16</itemgap>
+                    <control type="image">
+                        <width>16</width>
+                        <height>100%</height>
+                        <aspectratio aligny="center">keep</aspectratio>
+                        <texture colordiffuse="main_fg_30">common/cube-16.png</texture>
+                    </control>
+                    <control type="label">
+                        <left>2</left>
+                        <textcolor>main_fg_100</textcolor>
+                        <label>$PARAM[label]$INFO[Window(Home).Property(NextAired.$PARAM[listid].Date),$COMMA  ,]</label>
+                        <include>Statusbar_Menubar_Items</include>
+                    </control>
+                    <control type="image">
+                        <texture colordiffuse="$VAR[ColorHighlight]">common/white.png</texture>
+                        <width>3</width>
+                        <top>10</top>
+                        <bottom>8</bottom>
+                        <visible>Control.HasFocus($PARAM[listid])</visible>
+                    </control>
+                    <control type="label">
+                        <textcolor>main_fg_70</textcolor>
+                        <label>$INFO[Container($PARAM[listid]).ListItem.Label]$INFO[Container($PARAM[listid]).ListItem.Property(NextNumber), • ,]$INFO[Container($PARAM[listid]).ListItem.Property(NextTitle), ,]$INFO[Container($PARAM[listid]).ListItem.Property(ShortTime), @ ,]</label>
+                        <include>Statusbar_Menubar_Items</include>
+                        <visible>Control.HasFocus($PARAM[listid])</visible>
+                    </control>
                 </control>
             </control>
             <control type="panel" id="$PARAM[listid]">
-                <left>0</left>
-                <right>0</right>
-                <top>-20</top>
-                <height>422</height>
+                <left>-10</left>
+                <right>-10</right>
+                <top>40</top>
+                <height>410</height>
                 <orientation>horizontal</orientation>
                 <visible>$PARAM[visible]</visible>
                 <visible>Integer.IsGreater(Container($PARAM[listid]).NumItems) | Container.IsUpdating($PARAM[listid])</visible>
-                <itemlayout width="570" height="422">
+                <itemlayout width="606.66" height="480">
                     <control type="group">
-                        <left>30</left>
-                        <right>-10</right>
-                        <top>30</top>
-                        <height>318.125</height>
-                        <control type="image">
-                            <bordersize>10</bordersize>
-                            <include>Defs_Shadow_Small</include>
-                            <aspectratio scalediffuse="false">scale</aspectratio>
-                            <texture colordiffuse="PosterBack">common/white.png</texture>
-                        </control>
-                        <control type="image">
-                            <bordersize>10</bordersize>
-                            <texture colordiffuse="main_bg_70">common/white.png</texture>
-                        </control>
-                        <control type="image">
-                            <bordersize>10</bordersize>
-                            <texture background="true">$INFO[ListItem.Property(fanart)]</texture>
-                        </control>
-                        <control type="image">
-                            <right>10</right>
-                            <bottom>10</bottom>
-                            <height>35</height>
-                            <width>190</width>
-                            <texture colordiffuse="bf000000">common/white.png</texture>
-                        </control>
-                        <control type="label">
-                            <right>10</right>
-                            <bottom>10</bottom>
-                            <height>35</height>
-                            <width>190</width>
-                            <aligny>center</aligny>
-                            <align>center</align>
-                            <font>font_statusbar</font>
-                            <textcolor>main_fg_70</textcolor>
-                            <label>$INFO[ListItem.Property(NextNumber)]$INFO[ListItem.Property(ShortTime), @ ,]</label>
-                        </control>
-                    </control>
-                    
-                </itemlayout>
-                <focusedlayout width="570" height="422">
-                    <control type="group">
-                        <left>30</left>
-                        <right>-10</right>
-                        <top>30</top>
-                        <height>318.125</height>
-                        <include>Animation_FocusBounce_Small</include>
-                        <control type="image">
-                            <bordersize>10</bordersize>
-                            <include>Defs_Shadow_Small</include>
-                            <aspectratio scalediffuse="false">scale</aspectratio>
-                            <texture colordiffuse="PosterBack">common/white.png</texture>
-                        </control>
-                        <control type="image">
-                            <bordersize>10</bordersize>
-                            <texture colordiffuse="main_bg_70">common/white.png</texture>
-                        </control>
-                        <control type="image">
-                            <bordersize>10</bordersize>
-                            <texture background="true">$INFO[ListItem.Property(fanart)]</texture>
-                        </control>
-                        <control type="image">
-                            <right>10</right>
-                            <bottom>10</bottom>
-                            <height>35</height>
-                            <width>190</width>
-                            <texture colordiffuse="bf000000">common/white.png</texture>
-                        </control>
-                        <control type="label">
-                            <right>10</right>
-                            <bottom>10</bottom>
-                            <height>35</height>
-                            <width>190</width>
-                            <aligny>center</aligny>
-                            <align>center</align>
-                            <font>font_statusbar</font>
-                            <textcolor>main_fg_70</textcolor>
-                            <label>$INFO[ListItem.Property(NextNumber)]$INFO[ListItem.Property(ShortTime), @ ,]</label>
-                        </control>
-                        <!-- Highlight -->
+                        <left>view_pad</left>
+                        <right>-view_pad</right>
                         <control type="group">
-                            <visible>Control.HasFocus($PARAM[listid])</visible>
-                            <include>View_Selectbox</include>
+                            <height>350</height>
+                            <include>View_Landscape_Artwork</include>
                         </control>
+                        <include>NextAired_Text</include>
+                    </control>
+                </itemlayout>
+                <focusedlayout width="606.66" height="480">
+                    
+                    <control type="group">
+                        <include>Animation_FocusBounce_Small</include>
+                        <left>view_pad</left>
+                        <right>-view_pad</right>
+                        <control type="group">
+                            <height>350</height>
+                            <include>View_Landscape_Artwork</include>
+                            <control type="group">
+                                <visible>Control.HasFocus($PARAM[listid])</visible>
+                                <include>View_Selectbox</include>
+                            </control>
+                        </control>
+                        <include>NextAired_Text</include>
                     </control>
                 </focusedlayout>
             </control>
             
         </definition>
+    </include>
+
+    <include name="NextAired_Text">
+        <control type="label">
+            <label>$INFO[ListItem.Label]</label>
+            <align>left</align>
+            <aligny>top</aligny>
+            <font>font_statusbar</font>
+            <textcolor>main_fg_100</textcolor>
+            <left>10</left>
+            <right>10</right>
+            <top>355</top>
+        </control>
+        <control type="label">
+            <label>$INFO[ListItem.Property(NextNumber)]$INFO[ListItem.Property(ShortTime), @ ,]</label>
+            <align>right</align>
+            <aligny>top</aligny>
+            <font>font_statusbar</font>
+            <textcolor>main_fg_70</textcolor>
+            <left>10</left>
+            <right>10</right>
+            <top>355</top>
+        </control>
     </include>
 </includes>
