@@ -634,6 +634,7 @@
         <ondown condition="Window.IsVisible(SettingsProfile.xml)">4</ondown>
         <ondown condition="Window.IsVisible(SettingsSystemInfo.xml)">95</ondown>
         <ondown condition="Window.IsVisible(SkinSettings.xml)">9100</ondown>
+        <ondown condition="Window.IsVisible(script-NextAired-TVGuide.xml) | Window.IsVisible(script-NextAired-TVGuide2.xml)">9500</ondown>
         <ondown>50</ondown>
         <height>120</height>
         <itemlayout width="70" height="view_pad">
