@@ -1,5 +1,6 @@
 [B]0.9.3[/B]
 Update widget code to use skinshortcut templates
+Update Nextaired
 
 [B]0.9.2[/B]
 Fix focus on re-entering home screen
